# arc-slice

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: criterion.rs  iai.rs  iai_comparison.rs
bytes/: Cargo.toml
bytes/benches/: buf.rs  bytes.rs  bytes_mut.rs
bytes/src/: bytes.rs  bytes_mut.rs  lib.rs
bytes/src/buf/: buf_impl.rs  buf_mut.rs  chain.rs  limit.rs  mod.rs  reader.rs  take.rs  uninit_slice.rs  writer.rs
bytes/tests/: test_bytes.rs
src/: __private.rs  arc.rs  atomic.rs  bstr.rs  buffer.rs  bytes.rs  error.rs  inlined.rs  layout.rs  lib.rs  loom.rs  macros.rs  msrv.rs  rust_compat.rs  serde.rs  slice.rs  slice_mut.rs  str.rs  utils.rs  vtable.rs
src/slice/: arc.rs  optimized.rs  raw.rs  simple.rs  vec.rs
src/slice_mut/: arc.rs  vec.rs
tests/: arc_slice.rs  arc_str.rs  concurrency.rs  readme.rs  slice_mut.rs
