[package]
name = "arc-slice"
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.64.0"
exclude = [".*"]
description = "Shared memory slices"
homepage = "https://github.com/wyfo/arc-slice"
readme = "README.md"
keywords = [
  "buffers",
  "io",
  "zero-copy",
]
categories = [
  "network-programming",
  "data-structures",
]
license = "MIT"
repository = "https://github.com/wyfo/arc-slice"

[features]
default = ["abort-on-refcount-overflow", "oom-handling", "std"]
abort-on-refcount-overflow = []
bstr = ["dep:bstr"]
bytemuck = ["dep:bytemuck"]
bytes = ["dep:bytes"]
inlined = ["dep:either"]
oom-handling = []
portable-atomic = ["dep:portable-atomic"]
portable-atomic-util = ["portable-atomic", "dep:portable-atomic-util"]
raw-buffer = []
serde = ["dep:serde", "oom-handling"]
std = []
# default layout
default-layout-any-buffer = []
default-layout-static = []
default-layout-boxed-slice = []
default-layout-raw = ["raw-buffer"]
default-layout-vec = []
default-layout-mut-any-buffer = []
default-layout-mut-vec = []

[dependencies]
bytemuck = { version = "1", default-features = false, optional = true }
bytes = { version = "1", default-features = false, optional = true }
bstr = { version = "1", default-features = false, features = ["alloc"], optional = true }
cfg-if = "1"
either = { version = "1", default-features = false, optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
bytes = "1.10.1"
criterion = "0.5.1"
iai-callgrind = "0.14.0"
memmap2 = "0.9.5"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(unreachable_checked)'] }

[lints.clippy]
dbg_macro = "forbid"
semicolon_if_nothing_returned = "forbid"
incompatible_msrv = "allow"
#undocumented_unsafe_blocks = "forbid"

[package.metadata.docs.rs]
features = [
  "bstr",
  "bytemuck",
  "bytes",
  "inlined",
  "portable-atomic",
  "portable-atomic-util",
  "raw-buffer",
  "serde",
]
