[package]
name = "bytes"
version = "1.10.1"
edition = "2021"

[features]
default = ["std"]
std = ["arc-slice/std"]

[dependencies]
arc-slice = { version = "0.1.0-alpha.1", path = "..", default-features = false, features = ["default-layout-any-buffer", "default-layout-static", "default-layout-mut-any-buffer"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1.0.60", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_test = "1.0"
